syntax = "proto3";

package portal;

option go_package = "./portal";

message  siteReq {
  int64 siteId = 1;
}

message  siteReply {

}

service lowcode {
  rpc autoMigrate(siteReq) returns(siteReply);
}
